<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/size5"
    android:layout_marginEnd="@dimen/size5"
    tools:background="@drawable/background_main_black_gradient">

    <TextView
        android:id="@+id/lblTitle"
        style="@style/TextContextLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size10"
        android:text="@string/welcome"
        android:textSize="@dimen/text10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblName"
        style="@style/TextH3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size3"
        android:text="@string/dummy_welcome_name"
        app:layout_constraintStart_toStartOf="@id/lblTitle"
        app:layout_constraintTop_toBottomOf="@id/lblTitle" />

    <ImageView
        android:id="@+id/ivSearch"
        android:layout_width="@dimen/size32"
        android:layout_height="@dimen/size32"
        android:padding="@dimen/size4"
        android:src="@drawable/ic_search_white"
        app:layout_constraintBottom_toBottomOf="@id/lblName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/iconpoint" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llcSearchBar"
        android:layout_width="match_parent"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/size4"
        android:layout_marginStart="@dimen/size4"
        android:layout_marginBottom="@dimen/size10"
        android:layout_marginTop="@dimen/size10"
        app:layout_constraintTop_toBottomOf="@id/lblName"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_text_edit_text"
            android:focusable="false"
            android:fontFamily="@font/nunito_sans_semibold"
            android:hint="@string/search_movies"
            android:textColorHint="@color/grey_custom"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_search_white_small"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/nunito_sans_semibold"
                android:inputType="text"
                android:paddingStart="@dimen/size15"
                android:paddingEnd="@dimen/size15"
                android:textColor="@color/black"
                android:textSize="@dimen/text13" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>