<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@drawable/background_main_black_gradient">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/size10"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingStart="@dimen/size20"
        android:paddingTop="@dimen/list_item_spacing_half"
        android:paddingEnd="@dimen/size20"
        android:paddingBottom="@dimen/list_item_spacing_half">

        <View
            android:id="@+id/vTop"
            android:layout_width="120dp"
            android:layout_height="8dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/size10"
            android:background="@drawable/card_round_shape_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView1"
            style="@style/TextH3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size20"
            android:text="@string/select_categories"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vTop" />

        <TextView
            android:id="@+id/tvClearSelected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/size10"
            android:text="@string/clear"
            android:textColor="@color/blue_sky_little_dark"
            android:textSize="@dimen/text11"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView1" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvGenres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size12"
            android:layout_marginBottom="@dimen/size12"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/btnConfirm"
            app:layout_constraintTop_toBottomOf="@id/textView1"
            tools:layout_editor_absoluteX="18dp"
            tools:listitem="@layout/item_view_categories" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size60"
            android:layout_marginBottom="@dimen/size10"
            android:background="@drawable/button_apply_selector"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@color/blue_white_300"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.appcompat.widget.LinearLayoutCompat>