<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/size15"
    android:paddingTop="@dimen/size18"
    android:paddingEnd="@dimen/size15"
    tools:background="@drawable/background_main_black_gradient"
    tools:context=".presentation.main.movie.MovieFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/view_main_app_bar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size18"
        android:orientation="vertical"
        android:padding="@dimen/size4">

        <TextView
            android:id="@+id/textView1"
            style="@style/TextH3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categories"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSeeAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/size5"
            android:text="@string/see_all"
            android:textColor="@color/blue_sky_little_dark"
            android:textSize="@dimen/text11"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView1" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size10"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/textView1"
            tools:listitem="@layout/item_view_categories" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size18"
        android:orientation="vertical"
        android:padding="@dimen/size4">

        <TextView
            android:id="@+id/textView2"
            style="@style/TextH3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_trending_movies"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSeeAllTrendings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/size5"
            android:text="@string/see_all"
            android:textColor="@color/blue_sky_little_dark"
            android:textSize="@dimen/text11"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size10"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/textView2"
            tools:listitem="@layout/item_view_list" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size18"
        android:orientation="vertical"
        android:padding="@dimen/size4">

        <TextView
            android:id="@+id/textView3"
            style="@style/TextH3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_movie"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSeeAllMovies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/size5"
            android:text="@string/see_all"
            android:textColor="@color/blue_sky_little_dark"
            android:textSize="@dimen/text11"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size10"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/textView3"
            tools:listitem="@layout/item_view_list" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.appcompat.widget.LinearLayoutCompat>